[package]
name = "stream-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["blocking"]}
time-format = "1.1.2"
openssl = { version = "0.10.40", features = ["vendored"] }
simplelog = "^0.12.0"
log = "0.4.17"
cached = "0.34.1"
serde_json = "1.0.82"
serde = {version="1.0.138", features = ["derive"]}
urlencoding = "2.1.0"
sqlite = "0.26.0"
sanitize-filename = "0.4.0"
time = "0.3.11"